--- a/lab_step1.glade
+++ b/lab_step1.glade
@@ -355,7 +355,7 @@
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="halign">end</property>
-                    <property name="valign">center</property>
+                    <property name="valign">end</property>
                     <property name="margin_right">5</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">False</property>
