--- a/lab_step1.glade
+++ b/lab_step1.glade
@@ -192,7 +192,7 @@
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
                         <property name="model">p param list</property>
-                        <signal name="changed" handler="ChooseComboBoxValue" swapped="no"/>
+                        <signal name="changed" handler="OnChangedP" swapped="no"/>
                         <child>
                           <object class="GtkCellRendererText"/>
                           <attributes>
@@ -314,7 +314,6 @@
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
                         <property name="model">L param list</property>
-                        <signal name="changed" handler="ChooseComboBoxValue" swapped="no"/>
                         <child>
                           <object class="GtkCellRendererText" id="Lparamlist"/>
                           <attributes>
@@ -363,7 +362,6 @@
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
                         <property name="model">m param list</property>
-                        <signal name="changed" handler="ChooseComboBoxValue" swapped="no"/>
                         <child>
                           <object class="GtkCellRendererText" id="m paramlist"/>
                           <attributes>
