--- a/lab_step1.glade
+++ b/lab_step1.glade
@@ -243,6 +243,7 @@
                     <property name="margin_right">5</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
+                    <signal name="clicked" handler="MakeAPlot" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
